--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   dartz: ^0.10.1
   get_it: ^7.7.0
+  flutter_rating_stars: ^1.1.0
 
 dev_dependencies:
   flutter_test:
